MaxPermSize not used in 8+
Signed-off-by: smlambert <slambert@gmail.com>